<resources>
    <string name="app_name">SC</string>

    <string name="accpt">Aceptar</string>
    <string name="rating_tittle">Puntuar servicio</string>
    <string name="confirm_arrival">Confirmar llegada</string>

    <string name="hello_world">Hello world!</string>
    <string name="login">Iniciar Sesion</string>
    <string name="join">Crear Cuenta</string>
    <string name="verPos">Ver Posiciones</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Conectar</string>
    <string name="action_search">buscar</string>
    <string name="title_activity_map_controller">Map</string>
    <string name="title_activity_landing_gral">Landing_gral</string>
    <string name="Nada">---</string>
    <string name="username">Usuario</string>
    <string name="user">Usuario</string>
    <string name="provider">Proveedor</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_landing">Service Tracking</string>
    <string name="title_activity_user">User</string>
    <string name="title_activity_provider">Provider</string>

    <string name="establish_conn">Iniciar Verificacion</string>

    <string name="creating_server">Creando Servidor</string>
    <string name="waiting_for_connection">Esperando Conexion</string>
    <string name="recieveing_data">Esperando Datos</string>
    <string name="connection_complete">Confirmados los datos</string>
    <string name="Error">Hubo un error</string>
    <string name="cancel">Cancelar</string>
    <string name="None">Large Text</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_title">Registrarse</string>
    <string name="register_username">Nombre de Usuario:</string>
    <string name="register_username_edittext">usuario</string>
    <string name="register_user_t">Tipo de Usuario:</string>
    <string name="register_radio_user">Usuario</string>
    <string name="register_radio_provider">Proveedor</string>
    <string name="register_button">Registrarse</string>
    <string name="profile">Perfil</string>
    <string name="see_services">Ver servicios</string>
    <string name="arrived">Confirmar llegada</string>
    <string name="title_activity_provider_profile">ProviderProfile</string>
    <string name="title_activity_provider_services">ProviderServices</string>
    <string name="user_search_button">Buscar Proveedores</string>
    <string name="user_view_services_button">Ver Servicios</string>
    <string name="user_create_service_button">Crear Servicio</string>
    <string name="title_activity_provider_search">ProviderSearch</string>
    <string name="provider_search_filter">Buscar Proveedores</string>
    <string name="provider_search_title">Proveedores</string>
    <string name="title_activity_user_service_list">UserServiceList</string>
    <string name="user_service_list_title">Tus Servicios</string>
    <string name="user_service_list_radio_sent">Enviados</string>
    <string name="user_service_list_radio_completed">Completados</string>
    <string name="user_service_list_radio_all">Todos</string>
    <string name="title_activity_user_create_service">Crear un Servicio</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to creating a service-->
    <string name="user_create_service_provider_name_txt">Proveedor</string>
    <string name="user_create_service_title">Crear un Servicio</string>
    <string name="user_create_service_provider_edittext_hint"><![CDATA[<proveedor>]]></string>
    <string name="user_create_service_type_txt">Tipo de Servicio</string>
    <string name="user_create_service_type_edittext_hint"><![CDATA[Tipo]]></string>
    <string name="user_create_service_longitude_latitude_txt"><![CDATA[Longitud & Latitud]]></string>
    <string name="user_create_service_button_auto">Auto-Detect</string>
    <string name="user_create_service_message_txt">Mensaje</string>
    <string name="user_create_service_send_button">Enviar</string>
    <string name="user_create_service_longitude_edittext_hint"><![CDATA[<longitude>]]></string>
    <string name="user_create_service_latitude_edittext_hint"><![CDATA[<latitude>]]></string>
    <string name="user_create_service_message_edittext_hint"><![CDATA[Mensaje]]></string>
    <string name="user_service_detail_title">Servicio</string>
    <string name="user_service_detail_user_id">User ID</string>
    <string name="user_service_detail_provider_id">Provider ID</string>
    <string name="user_service_detail_service_type">Tipo de Servicio</string>
    <string name="user_service_detail_service_status">Status</string>
    <string name="placeholder_bar">---</string>
    <string name="user_confirm">Confirmar</string>
    <string name="which_user">¿Cual usuario?</string>
    <string name="user_name">Nombre del usuario</string>
    <string name="alert_dialog_register_successful">Registro completado satisfactoriamente</string>
    <string name="alert_dialog_confirmation_successful">El servicio se ha confirmado
        satisfactoriamente.</string>
    <string name="alert_dialog_register_fail">El registro ha fallado</string>
    <string name="alert_dialog_rate_fail">No se ha procesado su solicitud</string>
    <string name="alert_dialog_rate_successful">Se ha procesado su solicitud satisfactoriamente
        </string>
    <string name="alert_dialog_confirmation_fail">El servicio no ha podido ser confirmado.</string>
    <string name="alert_dialog_login_fail">Usuario o contraseña erronea.</string>
    <string name="alert_dialog_register_successful_warning">Aviso</string>
    <string name="alert_dialog_error_title">Error</string>
    <string name="alert_dialog_schedule_error">Error en el patron establecido para definir
        el horario de disponibilidad.</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="user_provider_detail_title">Proveedor</string>
    <string name="password">Contraseña</string>
    <string name="title_activity_provider_register">ProviderRegister</string>
    <string name="provider_create_account_title">Registrarse como proveedor</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="name_and_lastname">Nombres y apellidos</string>
    <string name="description">Descripcion</string>
    <string name="availability_time_schedule">Horario de disponibilidad</string>
    <string name="description_details">Breve descripcion sobre tu trabajo</string>
    <string name="schedule_text">Lunes 8 a 12 y 15 a 16: L8-12,L15-16</string>
    <string name="title_activity_service_confirm">ServiceConfirm</string>
    <string name="confirm_title">Confirma tu Servicio</string>
    <string name="proveedor">Proveedor</string>
    <string name="choose_provider">Solicitar servicio</string>
    <string name="choose_provider_text_view">Elegir proveedor ...</string>
    <string name="rate">Puntuar</string>
    <string name="title_activity_service_rate">ServiceRate</string>
    <string name="address">Ubicacion</string>
    <string name="register_password">Contraseña</string>
</resources>

