<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.eafit.pi1.sconnection.UserCreateService">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/user_create_service_title"
            android:id="@+id/user_create_service_title"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_create_service_provider_name_txt"
            android:id="@+id/user_create_service_provider_name_txt"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/user_create_service_provider_text_view"
            android:layout_margin="10dp"
            android:clickable="true"
            android:onClick="onSearchProviderClick"
            android:hint="@string/choose_provider_text_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_create_service_type_txt"
            android:id="@+id/user_create_service_type_txt"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_create_service_type_edittext"
            android:hint="@string/user_create_service_type_edittext_hint"
            android:layout_margin="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_create_service_longitude_latitude_txt"
                android:id="@+id/user_create_service_longitude_latitude_txt"
                android:layout_marginTop="15dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="40dp"
                android:layout_marginLeft="40dp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_create_service_button_auto"
                android:id="@+id/user_create_service_button_auto"
                android:onClick="onAutoClick" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_create_service_longitude_edittext"
            android:hint="@string/user_create_service_longitude_edittext_hint"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_create_service_latitude_edittext"
            android:hint="@string/user_create_service_latitude_edittext_hint"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/user_create_service_message_txt"
            android:id="@+id/user_create_service_message_txt"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/user_create_service_message_edittext"
            android:layout_weight="1"
            android:hint="@string/user_create_service_message_edittext_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_create_service_send_button"
            android:id="@+id/user_create_service_send_button"
            android:layout_gravity="center_horizontal"
            android:onClick="onSendClick" />

    </LinearLayout>
</RelativeLayout>
