<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.eafit.pi1.sconnection.Register">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/register_title"
            android:id="@+id/register_title"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/register_username"
            android:id="@+id/register_name_title"
            android:layout_marginTop="36dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/register_username_edittext"
            android:ems="10"
            android:id="@+id/username_text"
            android:layout_marginTop="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/register_user_t"
            android:id="@+id/textView3"
            android:layout_marginTop="30dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:id="@+id/radioGroup"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="0dp">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_radio_user"
                android:id="@+id/radioButton"
                android:checked="true"
                android:layout_margin="10dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_radio_provider"
                android:id="@+id/radioButton2"
                android:checked="false"
                android:layout_margin="10dp" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:id="@+id/register_button"
            android:layout_marginBottom="15dp"
            android:onClick="doRegisterClick"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" />
    </LinearLayout>

</RelativeLayout>
