<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="co.edu.eafit.pi1.sconnection.dialogs.ConfirmArrival">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/confirm_user_edittext"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:hint="@string/user_name" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/which_user"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_accept_button"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/confirm_user_edittext"
        android:onClick="acceptOnClick"
        android:layout_alignStart="@+id/confirm_user_edittext"
        android:text="@string/dialog_accept" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel"
        android:id="@+id/dialog_cancel_button"
        android:onClick="cancelOnClick"
        android:layout_alignTop="@+id/dialog_accept_button"
        android:layout_alignEnd="@+id/confirm_user_edittext" />

</RelativeLayout>
