<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.eafit.pi1.sconnection.Landing">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@drawable/round_rect"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/progressBar2"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editText_username"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:hint="@string/username"
            android:background="@null"
            android:padding="6dp"/>

        <View android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editText_password"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="center"
            android:hint="@string/password"
            android:background="@null"
            android:padding="6dp"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_login"
        android:text="@string/login"
        android:clickable="true"
        android:enabled="true"
        android:onClick="userClick"
        android:layout_below="@+id/progressBar2"
        android:layout_alignStart="@+id/button_join"
        android:layout_marginTop="130dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:id="@+id/button_join"
        android:clickable="true"
        android:enabled="true"
        android:layout_marginTop="88dp"
        android:layout_below="@+id/button_login"
        android:layout_centerHorizontal="true"
        android:onClick="registerClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/textView"
        android:layout_marginTop="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateBehavior="cycle"
        android:indeterminateOnly="true" />

</RelativeLayout>
